# entropy

./: .env.example  .gitignore  CLAUDE.md  README.md  WORKFLOW.md  agents.json  pyproject.toml  surgeons.yaml  surgeons_ai.yaml  surgeons_base.yaml  test_search.py  test_surgeons.yaml
.cursor/plans/: entropy-phase-1-implementation-20100bd4.plan.md
.github/workflows/: claude-code-review.yml  publish.yml  test.yml
docs/: TODO.md  WORKFLOW.md  architecture.md  commands.md  impl-plan-simulation-tests.md  use-cases.md  validation-plan.md
docs/benchmark/: MANIFEST.sha256  README.md
entropy/: __init__.py  cli.py  config.py  llm.py  spec.py
entropy/architect/: __init__.py  binder.py  hydrator.py  hydrator_utils.py  selector.py  sufficiency.py
entropy/cli/: app.py  display.py  utils.py
entropy/core/: llm.py  rate_limiter.py  rate_limits.py
entropy/models/: __init__.py  scenario.py
entropy/network/: generator.py  metrics.py
entropy/population/: __init__.py
entropy/results/: formatter.py  reader.py
entropy/sampler/: distributions.py
entropy/scenario/: __init__.py  compiler.py  exposure.py  (+5 more)
extropy/: __init__.py
scripts/: test_provider.py
stash/: commands.md
tests/: __init__.py  conftest.py  test_binder.py  test_cli.py  test_compiler.py  test_conviction.py  test_engine.py  test_integration_timestep.py  test_memory_traces.py  test_models.py  test_network.py  test_network_config_generator.py  test_paths.py  test_persona_renderer.py  test_progress.py  test_propagation.py  test_providers.py  test_rate_limiter.py  test_reasoning_prompts.py  test_sampler.py  test_scenario.py  test_scenario_validator.py  test_simulation.py  test_stopping.py  test_validator.py
todo/: fix-rate-limiting.md
todos/: phase1.md
(+82 files in other folders)
